# Sudoku

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  cli.py  explanation.py  pyproject.toml  requirements-dev.txt  strategies.py  sudoku.py  visualization.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  solver_regression.md  technique_request.md
.github/workflows/: ci.yml  slow-tests.yml
doc/: aic.md  als-wing.md  als-xz.md  avoidable-rectangle.md  bug-plus-one.md  developer-notes.md  empty-rectangle.md  finned-jellyfish.md  finned-swordfish.md  finned-x-wing.md  grouped-aic.md  grouped-x-chain.md  hidden-single.md  hidden-subsets.md  index.md  jellyfish.md  locked-candidates.md  multi-coloring.md  naked-single.md  naked-subsets.md  nishio.md  remote-pairs.md  simple-coloring.md  skyscraper.md  sue-de-coq.md  swordfish.md  turbot-fish.md  two-string-kite.md  unique-rectangle-type-1.md  unique-rectangle-type-2.md  unique-rectangle-type-3.md  unique-rectangle-type-4.md  w-wing.md  x-chain.md  x-wing.md  xy-chain.md  xy-wing.md  xyz-wing.md
sudoku_solver/: explanation.py  solver.py  strategies.py  visualization.py
sudoku_solver/techniques/: __init__.py  aic.py  als.py  basic.py  coloring.py  common.py  fish.py  misc.py  single_digit_chains.py  unique.py  wings.py
sudoku_solver/techniques/common/: __init__.py  bitmask.py  grid.py  iter_utils.py  moves.py  queries.py  simulation.py  state.py  technique.py  types.py
techniques/: __init__.py  aic.py  als.py  basic.py  coloring.py  common.py  fish.py  single_digit_chains.py  unique.py  wings.py
test/: PUZZLE_SOURCES.md  benchmark.py  puzzle  puzzle2  puzzle3  run_tests.py  run_tests.sh
test/online/: README.md  als_wing_hodoku.sdkc  als_xz_hodoku.sdkc  empty_rectangle_hodoku.sdkc  finned_x_wing_hodoku.sdkc  hidden_pair_hodoku.sdkc  naked_pair_hodoku.sdkc  remote_pair_hodoku.sdkc  skyscraper_hodoku.sdkc  sue_de_coq_hodoku.sdkc  turbot_fish_hodoku.sdkc  two_string_kite_hodoku.sdkc  unique_rectangle_type_1_hodoku.sdkc  x_chain_hodoku.sdkc  x_wing_hodoku.sdkc  xy_wing_hodoku.sdkc
test/puzzles/: diabolical_01  diabolical_02  diabolical_03  diabolical_04  diabolical_05  diabolical_06  diabolical_07  diabolical_08  diabolical_09  diabolical_10  diabolical_11  diabolical_12  diabolical_13  diabolical_14  diabolical_15  diabolical_16  diabolical_17  diabolical_18  diabolical_19  diabolical_20  diabolical_21  diabolical_22  diabolical_23  diabolical_24  diabolical_25  diabolical_26  diabolical_27  diabolical_28  diabolical_29  diabolical_30  diabolical_31  diabolical_32  diabolical_33  diabolical_34  diabolical_35  diabolical_36  diabolical_37  diabolical_38  diabolical_39  diabolical_40  (+110 more)
test/synthetic/: README.md  aic.sdkc  als_wing.sdkc  als_xz.sdkc  avoidable_rectangle.sdkc  bugplus1.sdkc  empty_rectangle.sdkc  finned_jellyfish.sdkc  finned_swordfish.sdkc  finned_x_wing.sdkc  grouped_aic.sdkc  grouped_x_chain.sdkc  hidden_pair.sdkc  hidden_quad.sdkc  hidden_single.sdkc  hidden_triple.sdkc  jellyfish.sdkc  locked_candidates.sdkc  multi_coloring.sdkc  naked_pair.sdkc  naked_quad.sdkc  naked_single.sdkc  naked_triple.sdkc  nishio.sdkc  remote_pairs.sdkc  simple_coloring.sdkc  skyscraper.sdkc  sue_de_coq.sdkc  swordfish.sdkc  turbot_fish.sdkc  two_string_kite.sdkc  unique_rectangle_type_1.sdkc  unique_rectangle_type_2.sdkc  unique_rectangle_type_3.sdkc  unique_rectangle_type_4.sdkc  w_wing.sdkc  x_chain.sdkc  x_wing.sdkc  xy_chain.sdkc  xy_wing.sdkc  (+1 more)
