[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A command-line Sudoku solver with human-style techniques, explanations, and timing."
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["."]
extend-exclude = [
    ".git",
    ".pycache",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort import ordering
    "W",  # pycodestyle warnings
]
ignore = [
    "E501",  # Black-compatible line wrapping is preferred over manual wrapping.
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "cli",
    "sudoku_solver",
    "sudoku",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[tool.coverage.run]
branch = true
source = ["sudoku_solver"]
omit = [
    "test/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
fail_under = 0
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.10"
files = [
    "sudoku_solver",
    "cli.py",
    "sudoku.py",
    "test/benchmark.py",
    "test/run_tests.py",
]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
