[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nabucho-sudoku"
version = "1.1.0"
description = "A command-line Sudoku solver with human-style techniques, explanations, and timing."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Ivan Debnar" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nabucho/Sudoku"
Repository = "https://github.com/nabucho/Sudoku"
Issues = "https://github.com/nabucho/Sudoku/issues"
Changelog = "https://github.com/nabucho/Sudoku/blob/main/CHANGELOG.md"

[project.scripts]
sudoku-solver = "cli:main"

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff",
]

[tool.setuptools]
py-modules = ["cli", "sudoku"]

[tool.setuptools.packages.find]
include = ["sudoku_solver*"]

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["."]
extend-exclude = [
    ".git",
    ".pycache",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort import ordering
    "W",  # pycodestyle warnings
]
ignore = [
    "E501",  # Formatter-compatible line wrapping is preferred over manual wrapping.
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "cli",
    "sudoku_solver",
    "sudoku",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
python_files = ["run_tests.py", "test_*.py"]
markers = [
    "slow: exhaustive fixture coverage intended for pre-release or deeper verification",
]

[tool.coverage.run]
branch = true
source = ["sudoku_solver"]
omit = [
    "test/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
fail_under = 0
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.9"
files = [
    "sudoku_solver",
    "cli.py",
    "sudoku.py",
    "test/benchmark.py",
    "test/run_tests.py",
]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
